Fixed eye blink on mobile by setting and unsetting the class with JS

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -38,10 +38,10 @@ body {
 
 // Avatar eye blink
 .blink {
-  animation: 5s blink infinite;
+  animation: 0.5s blink infinite;
 }
 
 @keyframes blink {
-  5%  { ry: 0; }
-  10% { ry: 8; }
+  from { ry: 0; }
+  to   { ry: 8; }
 }
